--- a/templates/index.html
+++ b/templates/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html>
-
+{% load staticfiles %}
 <head>
 	<meta charset="UTF-8">
     <meta name="renderer" content="webkit">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1" >
 	<title>课程机构列表 - 慕学在线网</title>
-	<link rel="stylesheet" type="text/css" href="../css/reset.css">
-	<link rel="stylesheet" type="text/css" href="../css/animate.css">
-	<link rel="stylesheet" type="text/css" href="../css/style.css">
+	<link rel="stylesheet" type="text/css" href="{% static 'css/reset.css' %}">
+	<link rel="stylesheet" type="text/css" href="{% static 'css/animate.css' %}">
+	<link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
     
-    <script src="../js/jquery.min.js" type="text/javascript"></script>
-    <script src="../js/jquery-migrate-1.2.1.min.js" type="text/javascript"></script>
+    <script src="{% static 'js/jquery.min.js' %}" type="text/javascript"></script>
+    <script src="{% static 'js/jquery-migrate-1.2.1.min.js' %}" type="text/javascript"></script>
 
 </head>
 <body>
@@ -23,10 +23,10 @@
 					<div class="fl"><p>服务电话：<b>33333333</b></p></div>
 					<!--登录后跳转-->
 
-                        
-                        <!-- <a style="color:white" class="fr registerbtn" href="register.html">注册</a> -->
-                        <!-- <a style="color:white" class="fr loginbtn" href="login.html">登录</a>  -->
-						
+                    {% if not request.user.is_authenticated %}
+                    <a style="color:white" class="fr registerbtn" href="register.html">注册</a> -->
+                    <a style="color:white" class="fr loginbtn" href="{% url 'user:login' %}">登录</a>  -->
+						{% else %}
 						<div class="personal">
                             <dl class="user fr">
                                 <dd>bobby<img class="down fr" src="../images/top_down.png"/></dd>
@@ -46,6 +46,7 @@
                                 </div>
                             </div>
                         </div>
+                        {% endif %}
 
 
 				</div>
@@ -567,14 +568,14 @@
         <li class="totop"></li>
     </ul>
 </section>
-<script src="../js/selectUi.js" type='text/javascript'></script>
-<script src="../js/deco-common.js" type='text/javascript'></script>
-<script type="text/javascript" src="../js/plugins/laydate/laydate.js"></script>
-<script src="../js/plugins/layer/layer.js"></script>
-<script src="../js/plugins/queryCity/js/public.js" type="text/javascript"></script>
-<script src="../js/unslider.js" type="text/javascript"></script>
-<script src="../js/plugins/jquery.scrollLoading.js"  type="text/javascript"></script>
-<script src="../js/deco-common.js"  type="text/javascript"></script>
+<script src="{% static 'js/selectUi.js' %}" type='text/javascript'></script>
+<script src="{% static 'js/deco-common.js' %}" type='text/javascript'></script>
+<script type="{% static 'text/javascript' %}" src="js/plugins/laydate/laydate.js"></script>
+<script src="{% static 'js/plugins/layer/layer.js' %}"></script>
+<script src="{% static 'js/plugins/queryCity/js/public.js' %}" type="text/javascript"></script>
+<script src="{% static 'js/unslider.js' %}" type="text/javascript"></script>
+<script src="{% static 'js/plugins/jquery.scrollLoading.js' %}"  type="text/javascript"></script>
+<script src="{% static 'js/deco-common.js' %}"  type="text/javascript"></script>
 
     <script type="text/javascript" src="../js/index.js"></script>
 
