--- a/templates/login.html
+++ b/templates/login.html
@@ -18,7 +18,7 @@
             <ul class="fr hd-bar">
                 <li>服务电话：<span>33333333</span></li>
                 <li class="active"><a href="{% url 'user:login' %}">[登录]</a></li>
-                <li><a href="">[注册]</a></li>
+                <li><a href="{% url 'user:register' %}">[注册]</a></li>
             </ul>
         </div>
     </div>
@@ -54,18 +54,19 @@
                         <label>密&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;码</label>
                         <input name="password" id="password_l" type="password" placeholder="请输入您的密码" />
                     </div>
-                    <div class="error btns login-form-tips" id="jsLoginTips"></div>
+                    <div class="error btns login-form-tips" id="jsLoginTips">
                       {% for k, v in form_errors.items %}
                       {{ v }}
                       {% endfor %}
                       {% if not form_errors %}{{ msg }}{% endif %}
+                      </div>
                      <div class="auto-box marb38">
 
                         <a class="fr" href="forgetpwd.html">忘记密码？</a>
                      </div>
                      <input class="btn btn-green" id="jsLoginBtn" type="submit" value="立即登录 > " />
                 </form>
-                <p class="form-p">没有慕学在线网帐号？<a href="register.html">[立即注册]</a></p>
+                <p class="form-p">没有慕学在线网帐号？<a href="{% url 'user:register' %}">[立即注册]</a></p>
             </div>
         </div>
     </div>
