--- a/templates/register.html
+++ b/templates/register.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html>
-
+    {% load staticfiles %}
 <head>
     <meta charset="UTF-8">
     <meta name="renderer" content="webkit">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1" >
     <title>慕学在线注册</title>
-    <link rel="stylesheet" type="text/css" href="../css/reset.css">
-    <link rel="stylesheet" type="text/css" href="../css/login.css">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/reset.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/login.css' %}">
 
 </head>
 <body>
 <div class="loginbox dialogbox">
     <h1>账号登录</h1>
-    <div class="close jsCloseDialog"><img src="../images/dig_close.png"/></div>
+    <div class="close jsCloseDialog"><img src="{% static 'images/dig_close.png' %}"/></div>
     <div class="cont">
         <form id="jsLoginForm" autocomplete="off">
             <div class="box">
@@ -103,35 +103,6 @@
                     <!--<h2 class="active">手机注册</h2>-->
                     <h2>邮箱注册</h2>
                 </div>
-                <!--<div class="tab-form">-->
-                    <!--<form id="mobile_register_form" autocomplete="off">-->
-                        <!--<input type='hidden' name='csrfmiddlewaretoken' value='gTZljXgnpvxn0fKZ1XkWrM1PrCGSjiCZ' />-->
-                        <!--<div class="form-group marb20">-->
-                            <!--<label>手&nbsp;机&nbsp;号</label>-->
-                            <!--<input id="jsRegMobile" name="account" type="text" placeholder="请输入您的手机号码" />-->
-                        <!--</div>-->
-                        <!--<div class="form-group marb20" id="jsRefreshCode">-->
-                            <!--<label>验&nbsp;证&nbsp;码</label>-->
-                            <!--<input autocomplete="off" class="form-control-captcha mobile-register-captcha" id="mobile-register-captcha_1" name="captcha_m_1" placeholder="请输入验证码" type="text" /> <input class="form-control-captcha mobile-register-captcha" id="mobile-register-captcha_0" name="captcha_m_0" placeholder="请输入验证码" type="hidden" value="29953bacf7005e8469388b449d97d00d523c1706" /> &nbsp;<img src="/captcha/image/29953bacf7005e8469388b449d97d00d523c1706/" alt="captcha" class="captcha" />-->
-                        <!--</div>-->
-                        <!--<div class="clearfix">-->
-                            <!--<div class="form-group marb8 verify-code">-->
-                                <!--<label>短信验证码</label>-->
-                                <!--<input id="jsPhoneRegCaptcha" name="mobile_code" type="text" placeholder="输入手机验证码" />-->
-                            <!--</div>-->
-                            <!--<input class="verify-code-btn sendcode" id="jsSendCode" value="发送验证码">-->
-                        <!--</div>-->
-                        <!--<div class="form-group marb8">-->
-                            <!--<label>密&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;码</label>-->
-                            <!--<input id="jsPhoneRegPwd" name="password_m" type="password" placeholder="请输入6-20位非中文字符密码" />-->
-                        <!--</div>-->
-                        <!--<div class="error btns" id="jsMobileTips"></div>-->
-                        <!--<div class="auto-box marb8">-->
-
-                        <!--</div>-->
-                        <!--<input class="btn btn-green" id="jsMobileRegBtn" type="button" value="注册并登录" />-->
-                    <!--</form>-->
-                <!--</div>-->
                 <div class="tab-form">
                     <form id="email_register_form" method="post" action="register.html" autocomplete="off">
                         <input type='hidden' name='csrfmiddlewaretoken' value='gTZljXgnpvxn0fKZ1XkWrM1PrCGSjiCZ' />
@@ -145,7 +116,7 @@
                         </div>
                         <div class="form-group marb8 captcha1 ">
                             <label>验&nbsp;证&nbsp;码</label>
-                            <img src="/captcha/image/2f3f82e5f7a054bf5caa93b9b0bb6cc308fb7011/" alt="captcha" class="captcha" /> <input id="id_captcha_0" name="captcha_0" type="hidden" value="2f3f82e5f7a054bf5caa93b9b0bb6cc308fb7011" /> <input autocomplete="off" id="id_captcha_1" name="captcha_1" type="text" />
+                            {{ register_form.captcha }}
                         </div>
                         <div class="error btns" id="jsEmailTips"></div>
                         <div class="auto-box marb8">
@@ -161,9 +132,9 @@
 </section>
 
 <input id="isLogin" type="hidden" value="False"/>
-<script src="../js/jquery.min.js" type="text/javascript"></script>
-<script src="../js/unslider.js" type="text/javascript"></script>
-<script src="../js/validateDialog.js"  type="text/javascript"></script>
-<script src="../js/login.js"  type="text/javascript"></script>
+<script src="{% static 'js/jquery.min.js' %}" type="text/javascript"></script>
+<script src="{% static 'js/unslider.js' %}" type="text/javascript"></script>
+<script src="{% static 'js/validateDialog.js' %}"  type="text/javascript"></script>
+<script src="{% static 'js/login.js' %}"  type="text/javascript"></script>
 </body>
 </html>
