--- a/templates/register.html
+++ b/templates/register.html
@@ -11,66 +11,14 @@
 
 </head>
 <body>
-<div class="loginbox dialogbox">
-    <h1>账号登录</h1>
-    <div class="close jsCloseDialog"><img src="{% static 'images/dig_close.png' %}"/></div>
-    <div class="cont">
-        <form id="jsLoginForm" autocomplete="off">
-            <div class="box">
-                <span class="word3">用户名</span>
-                <input type="text" name="account_l" id="account_l" placeholder="手机号/邮箱" />
-            </div>
-            <div class="box">
-                <span class="word2">密&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;码</span>
-                <input type="password" name="password_l" id="password_l" placeholder="请输入您的密码"/>
-            </div>
-            <div class="error btns login-form-tips" id="jsLoginTips"></div> <!--登录错误提示-->
-            <div class="btns">
-                <span><input type="checkbox" id="jsAutoLogin" />&nbsp;自动登录</span>
-                <span class="forget btn fr">忘记密码</span>
-            </div>
-            <div class="button">
-                <input type="button" value="登录" id="jsLoginBtn" />
-            </div>
-            <div class="btns">
-                <span class="fr">没有账号？<span class="regist btn">立即注册</span></span>
-            </div>
-        </form>
-    </div>
-</div>
-<div class="dialog" id="jsDialog">
-    <!--提示弹出框-->
-    <div class="successbox dialogbox" id="jsSuccessTips">
-        <h1>成功提交</h1>
-        <div class="close jsCloseDialog"><img src="../images/dig_close.png"/></div>
-        <div class="cont">
-            <h2>您的需求提交成功！</h2>
-            <p></p>
-        </div>
-    </div>
-    <div  class="noactivebox dialogbox" id="jsUnactiveForm" >
-        <h1>邮件验证提示</h1>
-        <div class="close jsCloseDialog"><img src="../images/dig_close.png"/></div>
-        <div class="center">
-            <img src="../images/send.png"/>
-            <p>我们已经向您的邮箱<span class="green" id="jsEmailToActive">12@13.com</span>发送了邮件，<br/>为保证您的账号安全，请及时验证邮箱</p>
-            <p class="a"><a class="btn" id="jsGoToEmail" target="_blank" href="http://mail.qq.com">去邮箱验证</a></p>
-            <p class="zy_success upmove"></p>
-            <p style="display: none;" class="sendE2">没收到，您可以查看您的垃圾邮件和被过滤邮件，也可以再次发送验证邮件（<span class="c5c">60s</span>）</p>
-            <p class="sendE">没收到，您可以查看您的垃圾邮件和被过滤邮件，<br/>也可以<span class="c5c green" id="jsSenEmailAgin" style="cursor: pointer;">再次发送验证邮件</span></p>
-        </div>
-    </div>
-</div>
-
-<div class="bg" id="dialogBg"></div>
 <header>
     <div class="c-box fff-box">
         <div class="wp header-box">
             <p class="fl hd-tips">慕学在线，在线学习平台！</p>
             <ul class="fr hd-bar">
                 <li>服务电话：<span>4001008031</span></li>
-                <li><a href="login.html">[登录]</a></li>
-                <li class="active"><a href="register.html">[注册]</a></li>
+                <li><a href="{% url 'user:login' %}">[登录]</a></li>
+                <li class="active"><a href="{% url 'user:register' %}">[注册]</a></li>
             </ul>
         </div>
     </div>
@@ -79,9 +27,9 @@
     <div class="c-box bg-box">
         <div class="login-box clearfix">
             <div class="hd-login clearfix">
-                <a class="index-logo" href="index.html"></a>
+                <a class="index-logo" href="{% url 'user:register' %}"></a>
                 <h1>用户注册</h1>
-                <a class="index-font" href="index.html">回到首页</a>
+                <a class="index-font" href="{% url 'index' %}">回到首页</a>
             </div>
             <div class="fl slide">
                 <div class="imgslide">
@@ -104,13 +52,12 @@
                     <h2>邮箱注册</h2>
                 </div>
                 <div class="tab-form">
-                    <form id="email_register_form" method="post" action="register.html" autocomplete="off">
-                        <input type='hidden' name='csrfmiddlewaretoken' value='gTZljXgnpvxn0fKZ1XkWrM1PrCGSjiCZ' />
-                        <div class="form-group marb20 ">
+                    <form id="email_register_form" method="post" action="{% url 'user:register' %}" autocomplete="off">
+                        <div class="form-group marb20 {% if register_form.errors.email %} errorput {% endif %}">
                             <label>邮&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;箱</label>
                             <input  type="text" id="id_email" name="email" value="None" placeholder="请输入您的邮箱地址" />
                         </div>
-                        <div class="form-group marb8 ">
+                        <div class="form-group marb8 {% if register_form.errors.password %} errorput {% endif %} ">
                             <label>密&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;码</label>
                             <input type="password" id="id_password" name="password"  value="None" placeholder="请输入6-20位非中文字符密码" />
                         </div>
@@ -118,14 +65,16 @@
                             <label>验&nbsp;证&nbsp;码</label>
                             {{ register_form.captcha }}
                         </div>
-                        <div class="error btns" id="jsEmailTips"></div>
+                        <div class="error btns" id="jsEmailTips">
+                            {{ register_form.errors }}
+                        </div>
                         <div class="auto-box marb8">
                         </div>
                         <input class="btn btn-green" id="jsEmailRegBtn" type="submit" value="注册并登录" />
-                    <input type='hidden' name='csrfmiddlewaretoken' value='5I2SlleZJOMUX9QbwYLUIAOshdrdpRcy' />
+                        {% csrf_token %}
                     </form>
                 </div>
-                <p class="form-p">已有账号？<a href="login.html">[立即登录]</a></p>
+                <p class="form-p">已有账号？<a href="{% url 'user:login' %}">[立即登录]</a></p>
             </div>
         </div>
     </div>
