--- a/templates/base.html
+++ b/templates/base.html
@@ -77,16 +77,16 @@
 				<div class="nav">
 					<div class="wp">
 						<ul>
-							<li ><a href="index.html">首页</a></li>
-							<li class="active">
-								<a href="course-list.html">
+							<li {% if current_page == 'index' %}class='active'{% endif %}><a href="{% url 'index' %}">首页</a></li>
+							<li {% if current_page == 'course' %}class='active'{% endif %}>
+								<a href="{% url 'course:course_list' %}">
 									公开课<img class="hot" src="/static/images/nav_hot.png">
 								</a>
 							</li>
-							<li >
+							<li {% if current_page == 'teacher' %}class='active'{% endif %}>
 								<a href="teachers-list.html">授课教师</a>
 							</li>
-							<li ><a href="org-list.html">授课机构</a></li>
+							<li {% if current_page == 'org' %}class='active'{% endif %}><a href="{% url 'org:org_list' %}">授课机构</a></li>
 						</ul>
 					</div>
 				</div>
