--- a/templates/org-list.html
+++ b/templates/org-list.html
@@ -1,92 +1,5 @@
-<!DOCTYPE html>
-<html>
-{% load staticfiles %}
-<head>
-	<meta charset="UTF-8">
-    <meta name="renderer" content="webkit">
-    <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1" >
-	<title>课程机构列表 - 慕学在线网</title>
-	<link rel="stylesheet" type="text/css" href="/static/css/reset.css">
-	<link rel="stylesheet" type="text/css" href="/static/css/animate.css">
-	<link rel="stylesheet" type="text/css" href="/static/css/style.css">
-    
-    <script src="/static/js/jquery.min.js" type="text/javascript"></script>
-    <script src="/static/js/jquery-migrate-1.2.1.min.js" type="text/javascript"></script>
-
-</head>
-<body>
-<section class="headerwrap ">
-    <header>
-		<div  class=" header">
- 			<div class="top">
-				<div class="wp">
-					<div class="fl"><p>服务电话：<b>33333333</b></p></div>
-					<!--登录后跳转-->
-
-                        
-                        <a style="color:white" class="fr registerbtn" href="register.html">注册</a>
-                        <a style="color:white" class="fr loginbtn" href="login.html">登录</a>
-                    
-
-
-				</div>
-			</div>
-
-            <div class="middle">
-                <div class="wp">
-                    <a href="index.html"><img class="fl" src="/static/images/logo.jpg"/></a>
-                    <div class="searchbox fr">
-                        <div class="selectContainer fl">
-                            <span class="selectOption" id="jsSelectOption" data-value="course">
-                                公开课
-                            </span>
-                            <ul class="selectMenu" id="jsSelectMenu">
-                                <li data-value="course">公开课</li>
-                                <li data-value="org">课程机构</li>
-                                <li data-value="teacher">授课老师</li>
-                            </ul>
-                        </div>
-                        <input id="search_keywords" class="fl" type="text" value="" placeholder="请输入搜索内容"/>
-                        <img class="search_btn fr" id="jsSearchBtn" src="/static/images/search_btn.png"/>
-                    </div>
-                </div>
-            </div>
-            
-            
-			<nav>
-				<div class="nav">
-					<div class="wp">
-						<ul>
-							<li ><a href="index.html">首页</a></li>
-							<li >
-								<a href="course-list.html">
-									公开课<img class="hot" src="/static/images/nav_hot.png">
-								</a>
-							</li>
-							<li >
-								<a href="teachers-list.html">授课教师</a>
-							</li>
-							<li class="active" ><a href="org-list.html">授课机构</a></li>
-						</ul>
-					</div>
-				</div>
-			</nav>
-            
-			</div>
-    </header>
-</section>
-<!--crumbs start-->
-
-    <section>
-        <div class="wp">
-            <ul  class="crumbs">
-                <li><a href="index.html">首页</a>></li>
-                <li>课程机构</li>
-            </ul>
-        </div>
-    </section>
-
-
+{% extends 'base.html' %}
+{% block content %}
 <section>
 	<div class="wp butler_list_box list">
 	<div class='left'>
@@ -95,13 +8,13 @@
 				<li>
 					<h2>机构类别</h2>
 					<div class="cont">
-                        <a href="?city="><span class="active2">全部</span></a>
+                        <a href="?city={{ city_id }}"><span class={% ifequal category '' %}"active2"{% endifequal %}>全部</span></a>
 
-                            <a href="?ct=pxjg&city="><span class="">培训机构</span></a>
+                            <a href="?ct=pxjg&city={{ city_id }}"><span {% ifequal category 'pxjg' %}class="active2"{% endifequal %}>培训机构</span></a>
 
-                            <a href="?ct=gx&city="><span class="">高校</span></a>
+                            <a href="?ct=gx&city={{ city_id }}"><span {% ifequal category 'gx' %}class="active2"{% endifequal %}>高校</span></a>
 
-                            <a href="?ct=gr&city="><span class="">个人</span></a>
+                            <a href="?ct=gr&city={{ city_id }}"><span {% ifequal category 'gr' %}class="active2"{% endifequal %}>个人</span></a>
 
 					</div>
 				</li>
@@ -109,18 +22,11 @@
 					<h2>所在地区</h2>
 					<div class="more">更多</div>
 					<div class="cont">
-                        <a href="?ct="><span class="active2">全部</span></a>
-                            
-                                <a href="?city=1&ct="><span class="">北京市</span></a>
-                            
-                                <a href="?city=2&ct="><span class="">上海市</span></a>
-                            
-                                <a href="?city=3&ct="><span class="">广州市</span></a>
-                            
-                                <a href="?city=4&ct="><span class="">深圳市</span></a>
-                            
-                                <a href="?city=5&ct="><span class="">天津市</span></a>
-                            
+                        <a href="?ct="><span{% ifequal city_id '' %}class="active2"{% endifequal %}>全部</span></a>
+                            {% for city in all_city %}
+                                <a href="?city={{ city.id }}&ct={{ category }}"><span {% ifequal city_id city.id|stringformat:'i' %}class="active2"{% endifequal %}>{{ city.name }}</span></a>
+                                {% endfor %}
+
 					</div>
 				</li>
 			</ul>
@@ -135,17 +41,17 @@
 					<li class=""><a href="?sort=courses&ct=&city=">课程数 &#8595;</a></li>
 				</ul>
 			</div>
-            
+                {% for org in org_list.object_list %}
                 <dl class="des difdes">
                     <dt>
                         <a href="org-detail-homepage.html">
-                            <img width="200" height="120" class="scrollLoading" data-url="/static/media/org/2016/11/imooc.png"/>
+                            <img width="200" height="120" class="scrollLoading" data-url="{{ org.image.url }}"/>
                         </a>
                     </dt>
                     <dd>
                         <div class="clearfix">
                              <a href="org-detail-homepage.html">
-                                 <h1>慕课网</h1>
+                                 <h1>{{ org.name }}</h1>
                                  <div class="pic fl">
 
                                          <img src="/static/images/authentication.png"/>
@@ -156,8 +62,8 @@
                              </a>
                         </div>
                         <ul class="cont">
-                            <li class="first"><p class="pic9">课程数：<span>1</span></p><p class="c7">学习人数：<span>1000</span></p></li>
-                            <li class="c8" style="padding-left:18px;">北京市海淀区中关村北大街</li>
+                            <li class="first"><p class="pic9">课程数：<span>{{ org.get_course_num }}</span></p><p class="c7">学习人数：<span>{{ org.students }}</span></p></li>
+                            <li class="c8" style="padding-left:18px;">{{ org.address }}</li>
                             <li class="pic10" style="padding-left:18px;">经典课程：
 
                                     <a href="/diary/19/">c语言基础入门</a>
@@ -169,143 +75,8 @@
                     </dd>
                     <div class="buy start_groupbuy jsShowPerfect2" data-id="22"><br/>联系<br/>服务</div>
                 </dl>
-            
-                <dl class="des difdes">
-                    <dt>
-                        <a href="org-detail-homepage.html">
-                            <img width="200" height="120" class="scrollLoading" data-url="/static/media/org/2016/11/bjdx.jpg"/>
-                        </a>
-                    </dt>
-                    <dd>
-                        <div class="clearfix">
-                             <a href="org-detail-homepage.html">
-                                 <h1>北京大学</h1>
-                                 <div class="pic fl">
+               {% endfor %}
 
-                                         <img src="/static/images/authentication.png"/>
-
-                                         <img src="/static/images/gold.png"/>
-
-                                 </div>
-                             </a>
-                        </div>
-                        <ul class="cont">
-                            <li class="first"><p class="pic9">课程数：<span>1</span></p><p class="c7">学习人数：<span>1000</span></p></li>
-                            <li class="c8" style="padding-left:18px;">北京市海淀区中关村北大街</li>
-                            <li class="pic10" style="padding-left:18px;">经典课程：
-
-                                    <a href="/diary/19/">c语言基础入门</a>
-
-                                    <a href="/diary/16/">数据库基础</a>
-
-                            </li>
-                        </ul>
-                    </dd>
-                    <div class="buy start_groupbuy jsShowPerfect2" data-id="22"><br/>联系<br/>服务</div>
-                </dl>
-            
-                <dl class="des difdes">
-                    <dt>
-                        <a href="org-detail-homepage.html">
-                            <img width="200" height="120" class="scrollLoading" data-url="/static/media/org/2016/11/qhdx-logo.png"/>
-                        </a>
-                    </dt>
-                    <dd>
-                        <div class="clearfix">
-                             <a href="org-detail-homepage.html">
-                                 <h1>清华大学</h1>
-                                 <div class="pic fl">
-
-                                         <img src="/static/images/authentication.png"/>
-
-                                         <img src="/static/images/gold.png"/>
-
-                                 </div>
-                             </a>
-                        </div>
-                        <ul class="cont">
-                            <li class="first"><p class="pic9">课程数：<span>1</span></p><p class="c7">学习人数：<span>1000</span></p></li>
-                            <li class="c8" style="padding-left:18px;">北京市海淀区中关村北大街</li>
-                            <li class="pic10" style="padding-left:18px;">经典课程：
-
-                                    <a href="/diary/19/">c语言基础入门</a>
-
-                                    <a href="/diary/16/">数据库基础</a>
-
-                            </li>
-                        </ul>
-                    </dd>
-                    <div class="buy start_groupbuy jsShowPerfect2" data-id="22"><br/>联系<br/>服务</div>
-                </dl>
-            
-                <dl class="des difdes">
-                    <dt>
-                        <a href="org-detail-homepage.html">
-                            <img width="200" height="120" class="scrollLoading" data-url="/static/media/org/2016/11/njdx.jpg"/>
-                        </a>
-                    </dt>
-                    <dd>
-                        <div class="clearfix">
-                             <a href="org-detail-homepage.html">
-                                 <h1>南京大学</h1>
-                                 <div class="pic fl">
-
-                                         <img src="/static/images/authentication.png"/>
-
-                                         <img src="/static/images/gold.png"/>
-
-                                 </div>
-                             </a>
-                        </div>
-                        <ul class="cont">
-                            <li class="first"><p class="pic9">课程数：<span>1</span></p><p class="c7">学习人数：<span>1000</span></p></li>
-                            <li class="c8" style="padding-left:18px;">北京市海淀区中关村北大街</li>
-                            <li class="pic10" style="padding-left:18px;">经典课程：
-
-                                    <a href="/diary/19/">c语言基础入门</a>
-
-                                    <a href="/diary/16/">数据库基础</a>
-
-                            </li>
-                        </ul>
-                    </dd>
-                    <div class="buy start_groupbuy jsShowPerfect2" data-id="22"><br/>联系<br/>服务</div>
-                </dl>
-            
-                <dl class="des difdes">
-                    <dt>
-                        <a href="org-detail-homepage.html">
-                            <img width="200" height="120" class="scrollLoading" data-url="/static/media/org/2016/11/imooc_klgAUn5.png"/>
-                        </a>
-                    </dt>
-                    <dd>
-                        <div class="clearfix">
-                             <a href="org-detail-homepage.html">
-                                 <h1>慕课网2</h1>
-                                 <div class="pic fl">
-
-                                         <img src="/static/images/authentication.png"/>
-
-                                         <img src="/static/images/gold.png"/>
-
-                                 </div>
-                             </a>
-                        </div>
-                        <ul class="cont">
-                            <li class="first"><p class="pic9">课程数：<span>1</span></p><p class="c7">学习人数：<span>1000</span></p></li>
-                            <li class="c8" style="padding-left:18px;">北京市海淀区中关村北大街</li>
-                            <li class="pic10" style="padding-left:18px;">经典课程：
-
-                                    <a href="/diary/19/">c语言基础入门</a>
-
-                                    <a href="/diary/16/">数据库基础</a>
-
-                            </li>
-                        </ul>
-                    </dd>
-                    <div class="buy start_groupbuy jsShowPerfect2" data-id="22"><br/>联系<br/>服务</div>
-                </dl>
-            
 		</div>
 		 <div class="pageturn">
             <ul class="pagelist">
@@ -393,42 +164,8 @@
 		</div>
         </div>
 </section>
-
-<footer>
-		<div class="footer">
-			<div class="wp">
-				<ul class="cont">
-					<li class="logo"><a href=""><img src="/static/images/footlogo.png"/></a></li>
-					<li class="code"><img src="/static/images/code.jpg"/><p class="center">扫描关注微信</p></li>
-					<li class="third"><img class="fl" src="/static/images/tell.png"/><p class="tell">33333333</p><p class="time">周一至周日 9:00-18:00</p></li>
-				</ul>
-
-			</div>
-			<p class="line"></p>
-			<div class="wp clear">
-                <span class="fl">? 2016 www.projectsedu.com 慕学在线-在线学习交流平台 保留所有权利</span>
-                <span class="fr">copyright ? 2016 ICP备案证书号：蜀ICP备xxxxx号-1</span>
-			</div>
-		</div>
-	</footer>
-
-<section>
-    <ul class="sidebar">
-        <li class="qq">
-            <a target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=2023525077&site=qq&menu=yes"></a>
-        </li>
-        <li class="totop"></li>
-    </ul>
-</section>
-<script src="/static/js/selectUi.js" type='text/javascript'></script>
-<script src="/static/js/deco-common.js" type='text/javascript'></script>
-<script type="text/javascript" src="/static/js/plugins/laydate/laydate.js"></script>
-<script src="/static/js/plugins/layer/layer.js"></script>
-<script src="/static/js/plugins/queryCity/js/public.js" type="text/javascript"></script>
-<script src="/static/js/unslider.js" type="text/javascript"></script>
-<script src="/static/js/plugins/jquery.scrollLoading.js"  type="text/javascript"></script>
-<script src="/static/js/deco-common.js"  type="text/javascript"></script>
-
+{% endblock %}
+{% block custom_js %}
 <script>
     $(function(){
         $('#jsStayBtn').on('click', function(){
@@ -452,5 +189,4 @@
 
 </script>
 
-</body>
-</html>
+{% endblock %}
