--- a/templates/base.html
+++ b/templates/base.html
@@ -101,15 +101,14 @@
         <div class="wp">
             <ul  class="crumbs">
                 <li><a href="{% url 'index' %}">首页</a>></li>
-                <li>公开课</li>
+                <li>{% block page_path %}公开课{% endblock %}</li>
             </ul>
         </div>
     </section>
 
 
-    <section>
-      {% block content %}
-      {% endblock %}
+{% block content %}
+{% endblock %}
 <footer>
 		<div class="footer">
 			<div class="wp">
