--- a/templates/course-video.html
+++ b/templates/course-video.html
@@ -27,7 +27,7 @@
             </div>
             <div class="statics clearfix">
                 <div class="static-item ">
-                    <span class="meta-value"><strong>{{ course.display_degree }}</strong></span>
+                    <span class="meta-value"><strong>{{ course.get_degree_display }}</strong></span>
                     <span class="meta">难度</span>
                     <em></em>
                 </div>
@@ -99,22 +99,22 @@
                     <div class="box mb40">
                         <h4>讲师提示</h4>
                         <div class="teacher-info">
-                            <a href="/u/315464/courses?sort=publish" target="_blank">
-                                <img src='/static/media/teacher/2016/11/aobama_CXWwMef.png' width='80' height='80' />
+                            <a href="{% url 'org:teacher_detail' course.teacher.id %}" target="_blank">
+                                <img src='{{ course.teacher.image.url }}' width='80' height='80' />
                             </a>
         <span class="tit">
-          <a href="/u/315464/courses?sort=publish" target="_blank">bobby</a>
+          <a href="/u/315464/courses?sort=publish" target="_blank">{{ course.teacher.name }}</a>
         </span>
-                            <span class="job">xxx</span>
+                            <span class="job">{{ course.teacher.name }}</span>
                         </div>
                         <div class="course-info-tip">
                             <dl class="first">
                                 <dt>课程须知</dt>
-                                <dd class="autowrap">python基础你需要有</dd>
+                                <dd class="autowrap">{{ course.you_need_know }}</dd>
                             </dl>
                             <dl>
                                 <dt>老师告诉你能学到什么？</dt>
-                                <dd class="autowrap">django的进阶开发</dd>
+                                <dd class="autowrap">{{ course.teacher_tell_you }}</dd>
                             </dl>
                         </div>
                     </div>
